--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
@@ -17,6 +17,10 @@
 	margin-bottom: 3px;
 }
 
+AssetDetailsElement > TemplateContainer {
+	flex-grow: 1;
+}
+
 /* "grid" */
 /* ------ */
 #gridContent {
