--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uxml
@@ -37,7 +37,8 @@
 			</ui:VisualElement>
 
 			<!-- RIGHT COLUMN (details) -->
-			<ui:VisualElement/>
+			<VisualPinball.Unity.Editor.AssetDetailsElement/>
+
 		</ui:TwoPaneSplitView>
 	</ui:TwoPaneSplitView>
 </ui:UXML>
