--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/LibraryAttributeElement.uxml
@@ -5,7 +5,7 @@
 		</ui:VisualElement>
 	</ui:VisualElement>
 	<ui:VisualElement name="edit" class="library-attribute-edit-element hidden">
-		<ui:TextField name="attribute-name-edit" />
+		<VisualPinball.Unity.Editor.SearchSuggest name="attribute-name-edit" />
 		<ui:TextField name="attribute-value-edit"/>
 		<ui:Button name="cancelButton" text="✕" />
 		<ui:Button name="okButton" text="✔" />
