--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
@@ -28,6 +28,9 @@ AssetDetailsElement > TemplateContainer {
 	flex-grow: 1;
 }
 
+#libraryList .library-item {
+	margin-left: 8px;
+}
 #libraryList .library-item Image {
 	width: 16px;
 	height: 16px;
