--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
@@ -1,19 +1,24 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-    <ui:Label name="nothing-selected" text="No item selected." />
-    <ui:VisualElement name="details">
-        <ui:Label name="title" />
-        <ui:VisualElement name="header">
-            <ui:Image name="category-icon" />
-            <ui:Label name="category-name" />
-            <ui:Image name="date-icon" />
-            <ui:Label name="date-value" />
-        </ui:VisualElement>
-        <ui:IMGUIContainer />
-        <ui:Label name="description-title" text="Description" class="subtitle" />
-        <ui:Label name="description-view" multiline="true" />
-        <ui:TextField name="description-edit" multiline="true" />
-        <ui:Label name="attributes-title" text="Attributes" class="subtitle" />
-        <ui:VisualElement name="attributes" />
-        <ui:Button name="add" text="New Attribute" />
-    </ui:VisualElement>
+	<ui:Label name="nothing-selected" text="No item selected."/>
+	<ui:VisualElement name="details">
+		<ui:Label name="title"/>
+		<ui:VisualElement name="header1">
+			<ui:Image name="library-icon"/>
+			<ui:Label name="library-name"/>
+			<ui:Image name="library-lock"/>
+		</ui:VisualElement>
+		<ui:VisualElement name="header2">
+			<ui:Image name="category-icon"/>
+			<ui:Label name="category-name"/>
+			<ui:Image name="date-icon"/>
+			<ui:Label name="date-value"/>
+		</ui:VisualElement>
+		<ui:IMGUIContainer/>
+		<ui:Label name="description-title" text="Description" class="subtitle"/>
+		<ui:Label name="description-view" multiline="true"/>
+		<ui:TextField name="description-edit" multiline="true"/>
+		<ui:Label name="attributes-title" text="Attributes" class="subtitle"/>
+		<ui:VisualElement name="attributes"/>
+		<ui:Button name="add" text="New Attribute"/>
+	</ui:VisualElement>
 </ui:UXML>
