--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowserX.uss
@@ -36,6 +36,14 @@ AssetDetailsElement > TemplateContainer {
 	height: 16px;
 }
 
+LibraryCategoryView {
+	flex-grow: 1;
+}
+
+#dragErrorContainerLeft {
+	margin: -5px;
+}
+
 /* "grid" */
 /* ------ */
 #gridContent {
