--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uss
@@ -38,9 +38,17 @@
 }
 
 #details > .subtitle {
-	margin-bottom: 8px;
+	margin-bottom: 4px;
 	margin-top: 16px;
 	-unity-font-style: bold;
+}
+
+#details > Button {
+	margin-top: 8px;
+}
+
+KeyValueElement {
+	margin: 2px 8px 0;
 }
 
 #nothing-selected {
