--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
 	<ui:Label name="nothing-selected" text="No item selected."/>
-	<ui:VisualElement name="details">
+	<ui:ScrollView name="details">
 		<ui:Label name="title"/>
 		<ui:VisualElement name="header1">
 			<ui:Image name="library-icon"/>
@@ -17,10 +17,20 @@
 		<ui:Label name="description-title" text="Description" class="subtitle"/>
 		<ui:Label name="description-view" multiline="true"/>
 		<ui:TextField name="description-edit" multiline="true"/>
+
 		<ui:Label name="attributes-title" text="Attributes" class="subtitle"/>
 		<ui:VisualElement name="attributes"/>
-		<ui:Button name="add" text="New Attribute"/>
+		<ui:Button name="attributes-add" text="New Attribute"/>
+
+		<ui:Label name="tags-title" text="Tags" class="subtitle"/>
+		<ui:VisualElement name="tags"/>
+		<ui:Button name="tags-add" text="New Tag"/>
+
+		<ui:Label name="links-title" text="Web Links" class="subtitle"/>
+		<ui:VisualElement name="links"/>
+		<ui:Button name="links-add" text="New Link"/>
+
 		<ui:Label name="info-title" text="Info" class="subtitle"/>
 		<ui:Label name="info-view"/>
-	</ui:VisualElement>
+	</ui:ScrollView>
 </ui:UXML>
