--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetDetailsElement.uxml
@@ -14,6 +14,12 @@
 			<ui:Label name="date-value"/>
 		</ui:VisualElement>
 		<ui:IMGUIContainer/>
+
+		<ui:VisualElement name="container-replace-selected">
+			<ui:Button name="replace-selected" text="Replace Selected"/>
+			<ui:Toggle name="replace-selected-keep-name" text="Keep Name(s)"/>
+		</ui:VisualElement>
+
 		<ui:Label name="description-title" text="Description" class="subtitle"/>
 		<ui:Label name="description-view" multiline="true"/>
 		<ui:TextField name="description-edit" multiline="true"/>
