doc: Fix lightbox.

--- a/VisualPinball.Unity/Documentation~/template/vpe/layout/_master.tmpl
+++ b/VisualPinball.Unity/Documentation~/template/vpe/layout/_master.tmpl
@@ -171,6 +171,18 @@
         </div>
       </div>
     </footer>
+    <script src="./{{_rel}}public/basicLightbox.min.js"></script>
+    <script type="text/javascript">
+    for (const img of document.querySelectorAll('img:not(#logo)')) {
+      img.onclick = () => {
+        basicLightbox.create(`<img src="${img.src}">`).show()
+        if (img.parentElement.tagName === 'A') {
+          img.parentElement.href = 'javascript:void(0)'
+          img.parentElement.target = '_self'
+        }
+      }
+    }
+    </script>
   </body>
   {{/redirect_url}}
 </html>
