assetlib: Add support for moving assets to different library.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowser.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetBrowser.uss
@@ -24,6 +24,10 @@
 	-unity-text-align: middle-center;
 }
 
+.library-element--dragover {
+	background-color: #515151 !important;
+}
+
 /*AssetDetails > TemplateContainer {
 	flex-grow: 1;
 }*/
