assetbrowser: First version of decals selector in read-only view.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverridePropertyDrawer.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetMaterialOverridePropertyDrawer.uxml
@@ -1,4 +1,5 @@
 ﻿<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
 	<uie:PropertyField binding-path="Name" label="Name" />
 	<uie:PropertyField binding-path="Material" label="Material" />
+	<!-- <uie:PropertyField binding-path="Id" label="Id" /> -->
 </ui:UXML>
