--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails_Body_ReadOnly.uxml
@@ -13,6 +13,9 @@
 	<!-- Material Variations -->
 	<uivpe:AssetMaterialVariationsElement name="material-variations" text="Material Variations"/>
 
+	<!-- Decal Variations -->
+	<uivpe:AssetDecalVariationsElement name="decal-variations" text="Decal Variations"/>
+
 	<!-- Tags -->
 	<ui:Foldout text="Tags" name="tags-foldout">
 		<ui:VisualElement name="tags-container" class="left-indent"/>
