assetbrowser: Add combination rules.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
@@ -100,14 +100,8 @@ PreviewEditorElement {
 	padding: 8px;
 }
 
-ListView#variations PropertyField {
-	padding: 4px 8px 8px 20px;
-}
-
-ListView#decals PropertyField {
-	padding: 4px 8px 8px 20px;
-}
-
+ListView#variations PropertyField,
+ListView#decals PropertyField,
 ListView#defaults PropertyField {
 	padding: 4px 8px 8px 20px;
 }
