assetbrowser: Group obj/slot into target, replace tuples with real classes, and other refactorings.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/AssetBrowser/AssetStructure/AssetDetails.uss
@@ -100,12 +100,10 @@ PreviewEditorElement {
 	padding: 8px;
 }
 
-ListView#variations PropertyField,
-ListView#decals PropertyField,
-ListView#defaults PropertyField {
+.padded-first-property-field PropertyField {
 	padding: 4px 8px 8px 20px;
 }
-
-ListView#variations PropertyField ListView PropertyField {
-	padding: 0 !important;
+.padded-first-property-field PropertyField ListView PropertyField,
+PropertyField.property-field-inner {
+	padding: 0;
 }
